ARCHIVED_OLD/full_output_utf8.txt
cargo :     Checking popup-bar v0.1.0 
(C:\Users\matth\OneDrive\Dokumente\GitHub\popup-bar\popup-bar\src-tauri)
In Zeile:1 Zeichen:15
+ cd src-tauri; cargo check > ../full_output.txt 2>&1
+               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking po...-bar\src-tauri) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0425]: cannot find value `config` in this scope
   --> src\modules\hotzone.rs:180:138
    |
180 | ...   info!("[hotzone] x={:.0} y={:.0} rel_x={:.0} rel_y={:.0} size={} 
screen={}x{}", pos.x, pos.y, rel_x, rel_y, config.size, scre...
    |                                                                          
                                         ^^^^^^
    |
help: you might have meant to use the available field
    |
180 |                              info!("[hotzone] x={:.0} y={:.0} 
rel_x={:.0} rel_y={:.0} size={} screen={}x{}", pos.x, pos.y, rel_x, rel_y, 
self.config.size, screen_w, screen_h);
    |                                                                          
                                                                +++++

warning: unused imports: `Arc` and `Mutex`
  --> src\commands\system_commands.rs:14:17
   |
14 | use std::sync::{Arc, Mutex};
   |                 ^^^  ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated method `tauri_plugin_shell::Shell::<R>::open`: Use 
tauri-plugin-opener instead.
  --> src\modules\launcher.rs:77:14
   |
77 |             .open(path.to_string(), None)
   |              ^^^^
   |
   = note: `#[warn(deprecated)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `popup-bar` (lib) generated 2 warnings
error: could not compile `popup-bar` (lib) due to 1 previous error; 2 warnings 
emitted

